# stride

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  IMPLEMENTATION.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: mdcath_smoke_domains.txt  mdcath_tier1_domains.txt  nacl.yaml  stage1_default.yaml  stage2_default.yaml  toy2d.yaml
configs/benchmarks/: tutorial35_multigoal.yaml
configs/goals/: alanine_phi_window.yaml  ligand_contact_asp42.yaml  nacl_association.yaml  westpa_distance_threshold.yaml
experiments/: verification_debt.md
experiments/headline/: protocol.md
scripts/: build_atomistic_dataset.py  build_mdanalysis_dataset.py  build_westpa_multigoal_lineage.py  build_westpa_segment_coordinates.py  create_sample_dataset.py  demo_nacl_westpa_adapter.py  demo_stride_binmapper.py  demo_westpa_like_loop.py  download_mdcath.sh  download_mdshare_dataset.py  evaluate_atomistic.py  evaluate_westpa_lineage.py  extract_westpa_dataset.py  inspect_westpa_h5.py  install_server_extras.sh  replay_westpa_steering.py  run_adaptive_toy.py  run_nacl_dataset.py  run_nacl_heldout_multiseed.py  run_nacl_heldout_seed.py  run_nacl_replay.py  run_toy2d.py  run_toy_replay.py  run_we_toy.py  run_we_toy_multiseed.py  run_westpa_steering_benchmark.py  score_atomistic.py  score_westpa_lineage.py  summarize_westpa_reports.py  train_atomistic.py  train_nacl.py  train_westpa_lineage.py  update_stride_online.py
src/stride/: __init__.py  cli.py  goals.py
src/stride/binning/: __init__.py  quantile_binner.py  value_binner.py
src/stride/config/: __init__.py  settings.py
src/stride/data/: __init__.py  atomistic.py  domains.py  features.py  mdanalysis_converter.py  pdb_converter.py  preprocess.py  sample.py  splits.py  validation.py
src/stride/drivers/: __init__.py  protocol.py
src/stride/eval/: __init__.py
src/stride/features/: nacl.py  toy2d.py
src/stride/labeling/: __init__.py  vampnets.py
src/stride/models/: __init__.py  egnn.py  frame_encoder.py  gru_ranker.py  pcoord_lineage_model.py  stride_value_model.py
src/stride/replay/: nacl_replay.py  offline_replay.py
src/stride/sampling/: adaptive_toy.py  we_toy.py  weighted_resampler.py
src/stride/sanity/: __init__.py
src/stride/scheduler/: __init__.py
src/stride/training/: __init__.py  atomistic.py  evaluation.py  metrics.py  pcoord_lineage.py  stride_value.py  train_nacl.py  train_toy.py  westpa_evaluation.py
src/stride/westpa_plugin/: __init__.py  controller.py  h5_reader.py  multigoal.py  nacl_adapter.py  online_store.py  promotion.py  runtime_scorer.py  segment_coordinates.py  steering_replay.py  stride_binmapper.py  value_mapper.py
tests/: test_atomistic_data.py  test_atomistic_training.py  test_cli.py  test_deep_value_model.py  test_dihedral_goal.py  test_mdcath_preprocess.py  test_multigoal_westpa_benchmark.py  test_pcoord_lineage_training.py  test_pdb_converter.py  test_simulation_driver_protocol.py  test_stage_a_validation.py  test_vampnet_pretrain.py  test_westpa_h5_reader.py  test_westpa_product_controller.py  test_westpa_runtime_and_evaluation.py  test_westpa_segment_coordinates.py  test_westpa_steering_replay.py  test_westpa_value_mapper.py
