[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stride"
version = "0.1.0"
description = "Goal-conditioned adaptive trajectory ranking for rare-event molecular simulation"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Leon Chien" }
]

dependencies = [
    "numpy",
    "pyyaml",
    "matplotlib",
    "scikit-learn",
    "torch"
]

[tool.setuptools.packages.find]
where = ["src"]